ecmascript/parser/tests/test262-error-references/fail/2cfb3ee18926479e.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/2cfb3ee18926479e.js:1:6
  |
1 | let []
  |      ^

